--- a/kingWeb/kingWeb/static/css/site.css
+++ b/kingWeb/kingWeb/static/css/site.css
@@ -1,42 +1,140 @@
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+#wrapper, html { height: 100%; }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+body { padding-bottom: 20px; height: 100%; background-color: #f1f1f1; }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
+    body::-webkit-scrollbar { width: 10px; height: 10px; }
+    /*滚动条头尾的两个按钮*/
+    body::-webkit-scrollbar-button { background-color: #888888; }
+    /*滚动条背景色*/
+    body::-webkit-scrollbar-track { background: #3c3c3c; }
+    /*条的颜色~*/
+    body::-webkit-scrollbar-thumb { background: #7853ad; border-radius: 4px; }
 
-/* styles for validation helpers */
-.field-validation-error {
-    color: #b94a48;
-}
 
-.field-validation-valid {
-    display: none;
-}
+a { cursor: pointer; }
 
-input.input-validation-error {
-    border: 1px solid #b94a48;
-}
+button, html input[type=button], input[type=reset], input[type=submit] { -webkit-appearance: button; cursor: pointer; }
 
-input[type="checkbox"].input-validation-error {
-    border: 0 none;
-}
+textarea { resize: none; }
 
-.validation-summary-errors {
-    color: #b94a48;
-}
+#wrapper { width: 100%; overflow-x: hidden; background-color: #eceded; height: calc(100% + 18px); }
 
-.validation-summary-valid {
-    display: none;
-}
+.border-bottom { border-bottom: 1px solid #e7eaec !important; }
+
+.field-validation-error { color: #bd0c0c; position: relative; top: 3px; left: 3px; }
+
+/*#region 后台侧边栏样式*/
+
+.title { padding-top: 7px; width: 188px; height: 50px; }
+
+    .title a { text-decoration: none; color: white; }
+
+.profile { padding-left: 15px; color: white; font-size: 20px; height: 200px; }
+
+.profile_img { width: 85px; height: 85px; border: 5px solid #FFF; }
+
+#sidebar-wrapper { width: 200px; height: 100%; z-index: 1000; }
+
+
+
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus { background-color: #615F5F; border-color: #337ab7; }
+
+.sidebar-nav > li { padding: 5px 0px 0px 15px; }
+
+/*左侧菜单*/
+.sidebar-menu { border-right: 1px solid #c4c8cb; }
+    .sidebar-menu i { padding: 3px; }
+/*一级菜单*/
+.menu-first { display: block; height: 45px; line-height: 45px; background-color: #3f3f3f; color: white; padding: 0 20px 0 0; font-size: 14px; font-weight: normal; text-align: center; }
+    /*一级菜单鼠标划过状态*/
+    .menu-first:hover { text-decoration: none; background-color: #d6d4d5; }
+    .menu-first:focus { text-decoration: none; background-color: #d6d4d5; }
+/*二级菜单*/
+.menu-second li a { background-color: #515050; color: #e3e1e1; height: 31px; line-height: 31px; font-size: 12px; text-align: center; }
+    /*二级菜单鼠标划过样式*/
+    .menu-second li a:hover { text-decoration: none; background-color: #686868; }
+    .menu-second li a:focus { text-decoration: none; background-color: #686868; }
+/*二级菜单选中状态*/
+.menu-second-selected { background-color: #686868; height: 31px; line-height: 31px; text-align: center; }
+/*覆盖bootstrap的样式*/
+.nav-list, .nav-list li a { padding: 0px; margin: 0px; }
+
+
+.sidebar-footer { bottom: 1px; height: 36px; clear: both; display: block; padding: 5px 0 0 0; position: fixed; width: 200px; background-color: #313131; }
+
+    .sidebar-footer a { padding: 2px 0 3px 0; text-align: center; width: 25%; font-size: 17px; display: block; float: left; }
+/*.dropdown-menu {
+    background-color: #383838;
+}*/
+
+.dropdown-menu > li > a { color: white; }
+/*#endregion */
+
+/*#region 后台右边内容样式*/
+#page-wrapper { padding: 0 15px; position: inherit; margin: 0px 0 0 200px; height: calc(100% - 142px); }
+
+.navbar-static-top { background: #f3f3f4; }
+
+.content-tabs { position: relative; height: 43px; background: #fafafa; line-height: 40px; border-bottom: solid 2px #2f4050; }
+
+    .content-tabs .roll-nav { position: absolute; width: 40px; height: 40px; text-align: center; color: #999; z-index: 2; top: 0; }
+
+    .content-tabs button { background: #fff; border: 0; height: 40px; width: 40px; outline: 0; }
+
+    .content-tabs .roll-right { right: 0; border-left: solid 1px #eee; }
+
+.roll-right.btn-group { width: 130px; padding: 0; }
+
+
+.roll-right.J_tabRight { right: 140px; }
+.roll-right li > a { color: #333; }
+.btn-group button { width: 130px; }
+
+nav.page-tabs { margin-left: 40px; width: 100000px; height: 40px; overflow: hidden; }
+
+    nav.page-tabs .page-tabs-content { float: left; }
+
+.page-tabs a.active { background: #2a3f54; color: #a7b1c2; }
+
+.page-tabs a { color: #999; }
+
+.page-tabs a { display: block; float: left; border-right: solid 1px #eee; padding: 0 15px; text-decoration: none; }
+
+    .content-tabs .roll-nav:hover, .page-tabs a:hover { color: #777; background: #f2f2f2; cursor: pointer; }
+
+    .page-tabs a.active i:hover, .page-tabs a.active:hover { background: #172d44; color: #fff; }
+
+#content-main { height: 100%; overflow: hidden; }
+
+.footer { background: none repeat scroll 0 0 #fff; border-top: 1px solid #e7eaec; overflow: hidden; padding: 10px 20px; margin: 0 -15px; height: 36px; }
+
+.ibox { margin-bottom: 25px; margin-top: 0; padding: 15px; }
+
+.ibox-title { -moz-border-bottom-colors: none; -moz-border-left-colors: none; -moz-border-right-colors: none; -moz-border-top-colors: none; background-color: #fff; border-color: #e7eaec; -webkit-border-image: none; -o-border-image: none; border-image: none; border-style: solid solid none; border-width: 4px 0 0; color: inherit; margin-bottom: 0; padding: 14px 15px 7px; min-height: 48px; }
+
+.ibox-content { background-color: #fff; color: inherit; padding: 15px 20px 20px; border-color: #e7eaec; -webkit-border-image: none; -o-border-image: none; border-image: none; border-style: solid solid none; border-width: 1px 0; }
+
+.dataTables_paginate { margin: 0 auto; text-align: center; }
+
+    .dataTables_paginate a { margin: 2px; }
+
+    .dataTables_paginate .glyphicon { font-size: 1.2em; color: #5a5a5a; height: 23px; width: 25px; padding-top: 2.5px; border-radius: 4px; }
+
+        .dataTables_paginate .glyphicon:hover { background-color: #d5d5d5; }
+
+    .dataTables_paginate .paginate_button current { width: 18px; height: 23px; display: inline-block; color: #3a3a3a; padding-top: 1px; }
+.shadow-btn button { color: white; }
+    .shadow-btn button:nth-child(1) { background-color: #09aced; }
+    .shadow-btn button:nth-child(2) { background-color: #29aced; }
+    .shadow-btn button:nth-child(3) { background-color: #39aced; }
+    .shadow-btn button:nth-child(4) { background-color: #49aced; }
+    .shadow-btn button:nth-child(5) { background-color: #59aced; }
+    .shadow-btn button:nth-child(6) { background-color: #69aced; }
+    .shadow-btn button:nth-child(7) { background-color: #79aced; }
+    .shadow-btn button:nth-child(8) { background-color: #89aced; }
+    .shadow-btn button:nth-child(9) { background-color: #99aced; }
+    .shadow-btn button:nth-child(10) { }
+    .shadow-btn button:nth-child(11) { }
+    .shadow-btn button:nth-child(12) { }
+.form-item { padding: 3px; }
+/*#endregion*/
