--- a/kingWeb/kingWeb/templates/adm/department/add.html
+++ b/kingWeb/kingWeb/templates/adm/department/add.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("admin","department", "index")
+                lkWeb.GoAction("adm","department", "index")
             }, "操作成功")
         })
     </script>
