--- a/kingWeb/kingWeb/templates/adm/menu/edit.html
+++ b/kingWeb/kingWeb/templates/adm/menu/edit.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
     $(function () {
         lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("admin","menu", "index")
+                lkWeb.GoAction("adm","menu", "index")
             }, "操作成功")
 
         $("#menuList").focusin(function () {
