--- a/kingWeb/kingWeb/templates/adm/menu/index.html
+++ b/kingWeb/kingWeb/templates/adm/menu/index.html
@@ -22,7 +22,7 @@
             if (id == "")
                 parent.layer.alert("请选择");
             else
-                lkWeb.GoAction("admin","menu", "edit", id);
+                lkWeb.GoAction("adm","menu", "edit", id);
         }
 
         function DelModel() {
@@ -33,9 +33,9 @@
             var id = lkWeb.GetCheckValue($(".checkChild"));
             //如果选中有菜单 直接默认为 添加为此菜单的子菜单
             if(id != "")
-                lkWeb.GoAction("admin","menu", "add", id);
+                lkWeb.GoAction("adm","menu", "add", id);
             else
-                lkWeb.GoAction("admin","menu", "add", 0);
+                lkWeb.GoAction("adm","menu", "add", 0);
         }
 
         var lkTable;
