--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -17,8 +17,7 @@
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap-theme.min.css' %}" rel="stylesheet" />
     <link href="{%static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" />
 
-    <!--Datatables-->@*<link href="{%static 'css/jquery.dataTables.min.css" rel="stylesheet" />*@
-    <script src="{%static 'lib/datatables/media/css/jquery.dataTables.min.cs' %}"></script>
+    <script src="{%static 'lib/datatables/media/css/jquery.dataTables.min.css' %}"></script>
     <script src="{%static 'lib/datatables/media/js/jquery.dataTables.min.js' %}"></script>
 
     <!--Layer-->
@@ -28,7 +27,7 @@
     <script src="{%static 'js/lkWeb.js' %}" ></script>
     <link href="{%static 'css/site.css' %}" rel="stylesheet" />
 
-    {%block styles%} styles  {% endblock%}
+    {%block styles%}    {% endblock%}
 
 </head>
 <body>
@@ -40,6 +39,6 @@
             {%block content%} content  {% endblock%}
         </div>
     </div>
-    {%block scripts%} scripts  {% endblock%}
+    {%block scripts%}    {% endblock%}
 </body>
 </html>
