--- a/kingWeb/kingWeb/templates/adm/system_option/add.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/add.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("admin","systemoption", "index")
+                lkWeb.GoAction("adm","systemoption", "index")
             }, "操作成功")
         })
 
