--- a/kingWeb/kingWeb/templates/adm/table_column/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/edit.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("admin", "tablecolumn", "index")
+                lkWeb.GoAction("adm", "tablecolumn", "index")
             }, "操作成功")
         })
 
