--- a/kingWeb/kingWeb/templates/adm/vewList/add.html
+++ b/kingWeb/kingWeb/templates/adm/vewList/add.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("admin","viewlist", "index","@Model.Table.Id")
+                lkWeb.GoAction("adm","viewlist", "index","@Model.Table.Id")
             }, "操作成功")
         })
 
