--- a/kingWeb/kingWeb/templates/adm/vewList/index.html
+++ b/kingWeb/kingWeb/templates/adm/vewList/index.html
@@ -31,8 +31,8 @@
                 var formFile = new FormData();
                 formFile.append("excelFile", fileObj); //加入文件对象
                 formFile.append("id", @Model.Table.Id);
-                var token = $("input[name='__RequestVerificationToken']").val();
-                formFile.append("__RequestVerificationToken", token);
+                var token = $("input[name='csrfmiddlewaretoken']").val();
+                formFile.append("csrfmiddlewaretoken", token);
                 var data = formFile;
                 $.ajax({
                     url: "@Url.Action("Import")",
@@ -65,21 +65,21 @@
         });
 
         function AddModel() {
-            lkWeb.GoAction("admin","viewlist", "add","@Model.Table.Id");
+            lkWeb.GoAction("adm","viewlist", "add","@Model.Table.Id");
         }
         function EditModel() {
             var id = lkWeb.GetCheckValue($(".checkChild"));
             if (id == "")
                 parent.layer.alert("请选择");
             else
-                lkWeb.GoAction("admin","viewlist", "edit", id+"/" + "@Model.Table.Id");
+                lkWeb.GoAction("adm","viewlist", "edit", id+"/" + "@Model.Table.Id");
         }
         function Detail() {
                   var id = lkWeb.GetCheckValue($(".checkChild"));
             if (id == "")
                 parent.layer.alert("请选择");
             else
-                lkWeb.GoAction("admin","viewlist", "detail", id+"/" + "@Model.Table.Id",true,"查看详情","80%","80%");
+                lkWeb.GoAction("adm","viewlist", "detail", id+"/" + "@Model.Table.Id",true,"查看详情","80%","80%");
         }
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
@@ -95,7 +95,7 @@
                           url: "@Url.Action("DownloadImportTemplate")",
                           type: "post",
                           dataType: "json",
-                          data: { param: {id:@Model.Table.Id}, __RequestVerificationToken: $("input[name='__RequestVerificationToken']").val()},
+                          data: { param: {id:@Model.Table.Id}, csrfmiddlewaretoken: $("input[name='csrfmiddlewaretoken']").val()},
                           async: false,
                           success: function (data) {
                               if (data.flag == true)
@@ -119,7 +119,7 @@
                           url: "@Url.Action("Export")",
                           type: "post",
                           dataType: "json",
-                          data: { param: {id:@Model.Table.Id}, __RequestVerificationToken: $("input[name='__RequestVerificationToken']").val()},
+                          data: { param: {id:@Model.Table.Id}, csrfmiddlewaretoken: $("input[name='csrfmiddlewaretoken']").val()},
                           async: false,
                           success: function (data) {
                               if (data.flag == true)
