--- a/kingWeb/kingWeb/templates/adm/Shared/layout.html
+++ b/kingWeb/kingWeb/templates/adm/Shared/layout.html
@@ -13,10 +13,10 @@
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap-theme.min.css'%}" rel="stylesheet" />
     <link href="{%static 'lib/font-awesome/css/font-awesome.min.css'%}" rel="stylesheet" />
 
-    <script src="{%static 'js/lkWeb.js'%}" asp-append-version="true"></script>
-    <link rel="stylesheet" href="{%static 'css/site.css'%}" asp-append-version="true" />
-
-    {% block styles %} styles {% endblock %}
+    <script src="{%static 'js/lkWeb.js'%}"  ></script>
+    <link rel="stylesheet" href="{%static 'css/site.css'%}"   />
+    <link href="{%static 'lib/datatables/media/css/jquery.dataTables.min.css'%}" rel="stylesheet" />
+    {% block styles %}   {% endblock %}
 
 </head>
 <body>
@@ -29,11 +29,14 @@
 
                 <div style="padding:3px;">
                     <i class="fa fa-user"></i>
-                    {user_name%}
+                   {{username}}
                 </div>
             </div>
             <div class="clearfix"></div>
             <div class="sidebar-menu">
+<a href="#a46" class="nav-header menu-first collapsed" data-toggle="collapse"><i class="fa fa-cog"></i>系统设置</a><ul id="a46" class="nav nav-list collapse menu-second"><li><a data-index="1" data-url="/adm/role" class="J_menuItem"><i class="fa fa-chevron-right"></i>角色管理</a></li><li><a data-index="2" data-url="/adm/department" class="J_menuItem"><i class="fa fa-chevron-right"></i>部门管理</a></li><li><a data-index="3" data-url="/adm/role/authen" class="J_menuItem"><i class="fa fa-chevron-right"></i>角色授权</a></li><li><a data-index="4" data-url="/adm/user" class="J_menuItem"><i class="fa fa-chevron-right"></i>用户管理</a></li><li><a data-index="5" data-url="/adm/user/department" class="J_menuItem"><i class="fa fa-chevron-right"></i>用户部门</a></li><li><a data-index="6" data-url="/adm/module" class="J_menuItem"><i class="fa fa-chevron-right"></i>模块管理</a></li><li><a data-index="7" data-url="/adm/menu" class="J_menuItem"><i class="fa fa-chevron-right"></i>菜单管理</a></li><li><a data-index="8" data-url="/adm/tablelist/index" class="J_menuItem"><i class="fa fa-chevron-right"></i>表管理</a></li><li><a data-index="9" data-url="/adm/tablecolumn/index" class="J_menuItem"><i class="fa fa-chevron-right"></i>表结构管理</a></li><li><a data-index="11" data-url="/adm/systemoption/index" class="J_menuItem"><i class="fa fa-chevron-right"></i>系统参数</a></li><li><a data-index="12" data-url="/jobs" class="J_menuItem"><i class="fa fa-chevron-right"></i>后台任务</a></li><li><a data-index="13" data-url="/adm/user/edit" class="J_menuItem"><i class="fa fa-chevron-right"></i>修改信息</a></li></ul><a href="#a55" class="nav-header menu-first collapsed" data-toggle="collapse"><i class="fa fa-sticky-note"></i>系统日志</a><ul id="a55" class="nav nav-list collapse menu-second"><li><a data-index="1" data-url="/adm/log/operation" class="J_menuItem"><i class="fa fa-chevron-right"></i>操作日志</a></li><li><a data-index="2" data-url="/adm/log/login" class="J_menuItem"><i class="fa fa-chevron-right"></i>登陆日志</a></li><li><a data-index="3" data-url="/adm/log/chart" class="J_menuItem"><i class="fa fa-chevron-right"></i>统计图表</a></li></ul><a href="#a2033" class="nav-header menu-first collapsed" data-toggle="collapse"><i class="fa fa-database"></i>基础数据</a><ul id="a2033" class="nav nav-list collapse menu-second"><li><a data-index="1" data-url="/adm/viewlist/index/2" class="J_menuItem"><i class="fa fa-chevron-right"></i>部门管理</a></li><li><a data-index="2" data-url="/adm/viewlist/index/1009" class="J_menuItem"><i class="fa fa-chevron-right"></i>登录日志</a></li><li><a data-index="3" data-url="/adm/viewlist/index/1010" class="J_menuItem"><i class="fa fa-chevron-right"></i>领导管理</a></li><li><a data-index="99" data-url="#" class="J_menuItem"><i class="fa fa-chevron-right"></i>基础数据菜单权限</a></li></ul>
+            </div>
+            <!--<div class="sidebar-menu">
                 @if (myMenus != null && myMenus.Any())
                 {
                     StringBuilder sb = new StringBuilder();
@@ -60,7 +63,7 @@
                     @Html.Raw(sb.ToString());
                 }
 
-            </div>
+            </div>-->
 
             <div class="sidebar-footer">
                 <a><span class="fa fa-telegram"></span></a>
@@ -145,7 +148,7 @@
     <script>
 
     </script>
-    {% block scripts %} scripts {% endblock %}
+    {% block scripts %}   {% endblock %}
 
 </body>
 </html>
