--- a/kingWeb/kingWeb/templates/adm/table_list/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/add.html
@@ -7,7 +7,7 @@
             $("[data-toggle='tooltip']").tooltip();
 
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("admin", "tablelist", "index")
+                lkWeb.GoAction("adm", "tablelist", "index")
             }, "操作成功")
         })
 
