--- a/kingWeb/kingWeb/templates/adm/user/edit.html
+++ b/kingWeb/kingWeb/templates/adm/user/edit.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("admin","user", "index")
+                lkWeb.GoAction("adm","user", "index")
             }, "操作成功")
         })
     </script>
