--- a/kingWeb/kingWeb/templates/adm/user/index.html
+++ b/kingWeb/kingWeb/templates/adm/user/index.html
@@ -26,11 +26,11 @@
                 parent.layer.alert("请选择用户");
                 return;
             }
-              lkWeb.GoAction("admin","user", "authen", userId, true, "设置权限",'100%','100%');
+              lkWeb.GoAction("adm","user", "authen", userId, true, "设置权限",'100%','100%');
         }
 
         function AddModel() {
-            lkWeb.GoAction("admin","user", "add", 0);
+            lkWeb.GoAction("adm","user", "add", 0);
         }
         function DelModel()
         {
@@ -43,12 +43,12 @@
             if (id == "")
                 parent.layer.alert("请选择");
             else
-                lkWeb.GoAction("admin","user", "edit", id);
+                lkWeb.GoAction("adm","user", "edit", id);
 
         }
         var lkTable;
         function InitDataTable() {
-            var dataUrl = '@Url.Action("GetPageData")';
+            var dataUrl = '/adm/user/get_page_data/'
             var columns = [
                 {
                     "sClass": "text-center",
@@ -71,6 +71,7 @@
 
 
 {% block content %}
+{%csrf_token%}
 
 <div class="form-group">
     <button type="button" class="btn btn-success" onclick="AddModel()">添加</button>
@@ -87,7 +88,6 @@
         </span>
     </div>
 </div>
-@Html.AntiForgeryToken()
 <table class="table table-striped table-hover" id="lkTable">
     <thead>
         <tr>
