--- a/kingWeb/kingWeb/templates/adm/Shared/layout.html
+++ b/kingWeb/kingWeb/templates/adm/Shared/layout.html
@@ -123,16 +123,16 @@
             <!--右侧框架内容开始-->
             <div class="row J_mainContent" id="content-main">
                 {% block content %}
-                内容
+
                 {% endblock %}
-                <iframe id="frmBody" name="iframe0" class="J_iframe" data-id="/adm/control/welcome" style="width:calc(100%); height: calc(100%); border: 0; margin: 0; padding: 0; min-height: 400px;overflow-y:scroll" src="@Url.Action("Welcome","Control")"></iframe>
+                <iframe id="frmBody" name="iframe0" class="J_iframe" data-id="/adm/control/welcome" style="width:calc(100%); height: calc(100%); border: 0; margin: 0; padding: 0; min-height: 400px;overflow-y:scroll" src="/adm/control/welcome"></iframe>
 
             </div>
             <!--右侧框架内容结束-->
             <!--右侧底部开始-->
             <div class="footer">
                 <div class="pull-right">
-                    © 2017 - 2017 <a href="http://loneking.net" target="_blank">©lkWeb</a>
+                    © 2018 - 2018 <a href="http://loneking.net" target="_blank">©lkWeb</a>
                 </div>
             </div>
             <!-- 右侧底部结束-->
