--- a/kingWeb/kingWeb/templates/adm/menu/index.html
+++ b/kingWeb/kingWeb/templates/adm/menu/index.html
@@ -27,7 +27,7 @@
 
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("admin",ids, "menu", lkTable);
+            lkWeb.DeleteMulti("adm",ids, "menu", lkTable);
         }
         function AddModel() {
             var id = lkWeb.GetCheckValue($(".checkChild"));
