--- a/kingWeb/kingWeb/templates/adm/role/index.html
+++ b/kingWeb/kingWeb/templates/adm/role/index.html
@@ -30,7 +30,7 @@
 
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("admin",ids, "role", lkTable);
+            lkWeb.DeleteMulti("adm",ids, "role", lkTable);
         }
 
         var lkTable;
