--- a/kingWeb/kingWeb/templates/adm/table_column/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/index.html
@@ -30,7 +30,7 @@
 
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("admin",ids, "tablecolumn", lkTable);
+            lkWeb.DeleteMulti("adm",ids, "tablecolumn", lkTable);
         }
         function CopyModel() {
             var id = lkWeb.GetCheckValue($(".checkChild"));
