--- a/kingWeb/kingWeb/templates/adm/table_list/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/index.html
@@ -31,7 +31,7 @@
 
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("admin",ids, "tablelist", lkTable);
+            lkWeb.DeleteMulti("adm",ids, "tablelist", lkTable);
         }
         function CopyModel() {
             var id = lkWeb.GetCheckValue($(".checkChild"));
