--- a/kingWeb/kingWeb/templates/adm/vewList/index.html
+++ b/kingWeb/kingWeb/templates/adm/vewList/index.html
@@ -83,7 +83,7 @@
         }
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("admin",ids, "viewlist", lkTable,"@Model.Table.Id");
+            lkWeb.DeleteMulti("adm",ids, "viewlist", lkTable,"@Model.Table.Id");
         }
 
         function Import() {
