--- a/kingWeb/kingWeb/templates/adm/department/add.html
+++ b/kingWeb/kingWeb/templates/adm/department/add.html
@@ -14,13 +14,16 @@
 
 {% block content %}
 
-<form class="form-horizontal" action="@Url.Action("Add", new { id = 0 })" method="post" id="lkForm">
-    @Html.AntiForgeryToken()
+<form class="form-horizontal" action="/adm/department/post_add/" method="post" id="lkForm">
+     {%csrf_token%}
     <div class="form-group">
-        <input type="hidden" value="@ViewBag.ParentId" name="ParentId" />
-        <label class="col-md-3 control-label">上级部门</label>
+         <label class="col-md-3 control-label">上级部门</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="ParentName" value="@ViewBag.ParentName" readonly="readonly" />
+             <select name="ParentId" class="form-control" >
+             {% for item in departments%}
+                <option value="{{item.id}}">{{item.name}}</option>
+             {% endfor %}
+            </select>
         </div>
     </div>
     <div class="form-group">
