--- a/kingWeb/kingWeb/templates/adm/system_option/index.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/index.html
@@ -31,7 +31,7 @@
 
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("admin",ids, "systemoption", lkTable);
+            lkWeb.DeleteMulti("adm",ids, "systemoption", lkTable);
         }
 
         var lkTable;
