--- a/kingWeb/kingWeb/templates/adm/user/index.html
+++ b/kingWeb/kingWeb/templates/adm/user/index.html
@@ -35,7 +35,7 @@
         function DelModel()
         {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("admin",ids, "user", lkTable);
+            lkWeb.DeleteMulti("adm",ids, "user", lkTable);
         }
 
         function EditModel() {
