--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -17,6 +17,8 @@
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap-theme.min.css' %}" rel="stylesheet" />
     <link href="{%static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" />
 
+    <script src="{% static 'lib/bootstrap-suggest-plugin/dist/bootstrap-suggest.min.js'%}'"></script>
+
     <script src="{%static 'lib/datatables/media/css/jquery.dataTables.min.css' %}"></script>
     <script src="{%static 'lib/datatables/media/js/jquery.dataTables.min.js' %}"></script>
 
