--- a/kingWeb/kingWeb/templates/adm/menu/edit.html
+++ b/kingWeb/kingWeb/templates/adm/menu/edit.html
@@ -1,8 +1,7 @@
-﻿{% extends "adm/shared/layout_content.html" %}
+﻿ {% extends "adm/shared/layout_content.html" %}
 {%block title%}{{title}}{% endblock%}
 
 {% block scripts %}
-    <script src="{% statkc 'lib/bootstrap-suggest-plugin/dist/bootstrap-suggest.min.js'%}'"></script>
 
     <script type="text/javascript">
     $(function () {
@@ -18,12 +17,12 @@
                     effectiveFieldsAlias: {
                         id: "Id",
                         name: "名称",
-                        typeName: "类型",
+                        typename: "类型",
                         url: "URL地址"
                     },
                     effectiveFields: ["id", "name", "typeName", "url"],
                     getDataMethod: "url",
-                    url: "@Url.Action("GetList", "Menu")?searchKey=", //最后一个参数为关键字请求参数
+                    url: "/adm/menu/get_list?searchkey=", //最后一个参数为关键字请求参数
                     idField: "id",
                     keyField: "name"
                 }).on('onDataRequestSuccess', function (e, result) {
@@ -47,23 +46,27 @@
 
 
 {% block content %}
-<form class="form-horizontal" action="@Url.Action("Edit");" method="post" id="lkForm">
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(item => item.Id, new { @class = "form-control" })
-    @Html.HiddenFor(item => item.Type, new { @class = "form-control" })
+<form class="form-horizontal" action="/adm/menu/post_edit/" method="post" id="lkForm">
+  {%csrf_token%}
+    <input name="Id" type="hidden" id="txtParentId" value="{{Id}}"  />
+
     <div class="form-group">
         <label class="col-md-3 control-label">所属模块</label>
         <div class="col-md-7">
-            <input name="ModuleId" type="hidden" id="txtModuleId" value="@ViewBag.ModuleId" />
-            @Html.DropDownList("ModuleId", (SelectList)ViewBag.Modules, new { @class = "form-control", @onchange = "SelectModule(this.value)" })
+                <input name="ModuleId" type="hidden" id="txtModuleId" value="{{moduleid}}" />
+              <select name="ParentId" class="form-control" onchange="SelectModule(this.value)">
+             {% for item in modules%}
+                <option value="{{item.id}}" {%ifequal item.id moduleid %} selected {%endifequal%}>{{item.name}}</option>
+             {% endfor %}
+            </select>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">上级菜单</label>
         <div class="col-md-7">
             <div class="input-group">
-                <input name="ParentID" type="hidden" id="txtParentId" asp-for="ParentId" />
-                <input class="form-control" type="text" autocomplete="off" id="menuList" value="@ViewBag.ParentName" />
+                <input name="ParentID" type="hidden" id="txtParentId" value="{{parentid}}"  />
+                <input class="form-control" type="text" autocomplete="off" id="menuList" value="{{parentname}}" />
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle>
                         <span class="caret"></span>
@@ -76,7 +79,7 @@
     <div class="form-group">
         <label class="col-md-3 control-label">菜单名称</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Name" asp-for="Name"
+            <input type="text" class="form-control" name="Name" value="{{name}}"
                    data-val="true" data-val-maxlength="菜单名称长度不能超过18个字符" data-val-maxlength-max="8"
                    data-val-minlength="菜单名称长度不能少于2个字符" data-val-minlength-min="2" data-val-required="菜单名称不能为空" />
             <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
@@ -85,7 +88,7 @@
     <div class="form-group">
         <label class="col-md-3 control-label">URL地址</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Url" asp-for="Url"
+            <input type="text" class="form-control" name="Url" value="{{url}}"
                    data-val="true" data-val-maxlength="菜单地址不能超过200个字符" data-val-maxlength-max="200"
                    data-val-minlength="菜单地址不能少于1个字符" data-val-minlength-min="1" data-val-required="菜单地址不能为空" />
             <span class="field-validation-valid" data-valmsg-for="Url" data-valmsg-replace="true"></span>
@@ -94,7 +97,7 @@
     <div class="form-group">
         <label class="col-md-3 control-label">菜单图标</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" asp-for="Icon"
+            <input type="text" class="form-control" value="{{icon}}" name="Icon"
                    data-val="true" data-val-maxlength="菜单图标不能超过50个字符" data-val-maxlength-max="50" />
             <span class="field-validation-valid" data-valmsg-for="Icon" data-valmsg-replace="true"></span>
             <button class="btn btn-sm btn-info" style="margin:3px;" type="button" onclick="ViewIcon()">查看图标库</button>
@@ -103,7 +106,7 @@
     <div class="form-group">
         <label class="col-md-3 control-label">排序</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="ListOrder" asp-for="ListOrder"
+            <input type="text" class="form-control" name="ListOrder" value="{{listorder}}"
                    data-val-number="排序必须是一个数字。" data-val-required="排序不能为空" data-val="true" />
             <span class="field-validation-valid" data-valmsg-for="ListOrder" data-valmsg-replace="true"></span>
         </div>
