--- a/kingWeb/kingWeb/templates/adm/menu/index.html
+++ b/kingWeb/kingWeb/templates/adm/menu/index.html
@@ -35,12 +35,12 @@
             if(id != "")
                 lkWeb.GoAction("adm","menu", "add", id);
             else
-                lkWeb.GoAction("adm","menu", "add", 0);
+                lkWeb.GoAction("adm","menu", "add");
         }
 
         var lkTable;
         function InitDataTable() {
-            var dataUrl = '@Url.Action("GetPageData")';   //后台获取json数据的地址
+            var dataUrl = '/adm/menu/get_page_data/';   //后台获取json数据的地址
             var columns = [
                 {
                     "sClass": "text-center",
@@ -50,10 +50,10 @@
                     },
                     "bSortable": false
                 },
-                { "mData": "rowNum", "sClass": "text-center" },
-                { "mData": "moduleName", "sClass": "text-center" },
-                { "mData": "parentName", "sClass": "text-center" },
-                { "mData": "type", "sClass": "text-center" },
+                { "mData": "rownum", "sClass": "text-center" },
+                { "mData": "modulename", "sClass": "text-center" },
+                { "mData": "parentname", "sClass": "text-center" },
+                { "mData": "typename", "sClass": "text-center" },
                 { "mData": "name", "sClass": "text-center", "bSortable": false },
                 { "mData": "url", "sClass": "text-center", "bSortable": false },
                 {
@@ -64,8 +64,7 @@
                     },
                     "bSortable": false
                 },
-                { "mData": "order", "sClass": "text-center" },
-                { "mData": "createDateTime", "sClass": "text-center" }
+                { "mData": "listorder", "sClass": "text-center" },
             ];
             lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl);
     }
@@ -89,7 +88,7 @@
         </span>
     </div>
 </div>
-@Html.AntiForgeryToken()
+{%csrf_token%}
 <table class="table table-striped table-hover" id="lkTable">
     <thead>
         <tr>
@@ -104,7 +103,6 @@
             <th>URL地址</th>
             <th>图标</th>
             <th>排序</th>
-            <th>创建时间</th>
         </tr>
     </thead>
     <tbody></tbody>
