--- a/kingWeb/kingWeb/templates/adm/menu/edit.html
+++ b/kingWeb/kingWeb/templates/adm/menu/edit.html
@@ -6,40 +6,41 @@
     <script type="text/javascript">
     $(function () {
         lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("adm","menu", "index")
-            }, "操作成功")
+            lkWeb.GoAction("adm", "menu", "index")
+        }, "操作成功")
 
         $("#menuList").focusin(function () {
-                 $("#menuList").bsSuggest('init', {
-                    allowNoKeyword: !0,
-                    multiWord: !0,
-                    showHeader: !0,
-                    effectiveFieldsAlias: {
-                        id: "Id",
-                        name: "名称",
-                        typename: "类型",
-                        url: "URL地址"
-                    },
-                    effectiveFields: ["id", "name", "typeName", "url"],
-                    getDataMethod: "url",
-                    url: "/adm/menu/get_list?searchkey=", //最后一个参数为关键字请求参数
-                    idField: "id",
-                    keyField: "name"
-                }).on('onDataRequestSuccess', function (e, result) {
+            $("#menuList").bsSuggest('init', {
+                allowNoKeyword: !0,
+                multiWord: !0,
+                showHeader: !0,
+                effectiveFieldsAlias: {
+                    parentname: "上级菜单",
+                    id: "Id",
+                    name: "名称",
+                    typename: "类型",
+                    url: "URL地址"
+                },
+                effectiveFields: ["parentname", "id", "name", "typename", "url"],
+                getDataMethod: "url",
+                url: "/adm/menu/get_list/", //最后一个参数为关键字请求参数
+                idField: "id",
+                keyField: "name"
+            }).on('onDataRequestSuccess', function (e, result) {
 
-                }).on('onSetSelectValue', function (e, keyword, data) {
-                     $("#txtParentId").val(keyword.id);
-                }).on('onUnsetSelectValue', function () {
-                 });
-            })
+            }).on('onSetSelectValue', function (e, keyword, data) {
+                $("#txtParentId").val(keyword.id);
+            }).on('onUnsetSelectValue', function () {
+            });
         })
-        function SelectModule(value) {
-            $("#txtModuleId").val(value);
-        }
-                function ViewIcon() {
-            var url = " http://www.fontawesome.com.cn/faicons/";
-            lkWeb.OpenLayer(url, "图标库", "80%", "500px");
-        }
+    })
+    function SelectModule(value) {
+        $("#txtModuleId").val(value);
+    }
+    function ViewIcon() {
+        var url = " http://www.fontawesome.com.cn/faicons/";
+        lkWeb.OpenLayer(url, "图标库", "80%", "500px");
+    }
     </script>
 
 {% endblock %}
@@ -48,7 +49,7 @@
 {% block content %}
 <form class="form-horizontal" action="/adm/menu/post_edit/" method="post" id="lkForm">
   {%csrf_token%}
-    <input name="Id" type="hidden" id="txtParentId" value="{{Id}}"  />
+    <input name="Id" type="hidden" id="txtId" value="{{id}}"  />
 
     <div class="form-group">
         <label class="col-md-3 control-label">所属模块</label>
@@ -65,7 +66,7 @@
         <label class="col-md-3 control-label">上级菜单</label>
         <div class="col-md-7">
             <div class="input-group">
-                <input name="ParentID" type="hidden" id="txtParentId" value="{{parentid}}"  />
+                <input name="ParentId" type="hidden" id="txtParentId" value="{{parentid}}"  />
                 <input class="form-control" type="text" autocomplete="off" id="menuList" value="{{parentname}}" />
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle>
